<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/layout">

    <Button
        android:id="@+id/btnProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="#8AC249"
        android:text="@string/downloadandinstall"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="66dp"
        android:background="@android:color/transparent"
        android:textSize="18sp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:id="@+id/imageView"
        android:src="@drawable/banner"
        android:layout_above="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/download"
        android:layout_marginLeft="16dp"
        android:layout_alignTop="@+id/btnProgressBar"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/btnProgressBar"
        android:layout_alignEnd="@+id/textView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="                       "
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="           "
        android:id="@+id/textView3"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="        "
        android:id="@+id/textView2"
        android:layout_above="@+id/textView3"
        android:layout_alignParentStart="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/success"
        android:gravity="center"
        android:textSize="60dp"
        android:textStyle="italic"
        android:textColor="#19912B"
        android:id="@+id/textView4"
        android:layout_toEndOf="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="HazyROM is on your device"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="italic"
        android:textColor="#19912B"
        android:id="@+id/textView8"
        android:layout_toEndOf="@+id/textView"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/pupino"
        android:layout_below="@+id/textView8"
        android:layout_alignEnd="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ABABAB"
        android:textSize="20dp"
        android:text="@string/presentation"
        android:gravity="center"
        android:id="@+id/textView1"
        android:layout_toEndOf="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>